* Add Exclude constraint
* Allow to perform unaccented searches on Char fields
* Always raise exception in table handler
* Simplify API for Session: new, remove, check and reset
* Ensure that all buttons are registered in ir.model.button
* Make trytond-admin ask for admin email
* Add option to set admin email with trytond-admin
* Add option to reset admin password with trytond-admin
* Add reset password button
* Add depends on Button
* Add ModelData.has_model cache for ModelStorage.check_xml_record
* Limit authentication attempt per IP network
* Manage 'X-Forwarded' headers from proxies
* Add '_request' attribute to Transaction context
* Delete translations on deletion only when model has translatable field
* Remove MySQL backend
* Add keyword attribute to button tag
* Allow field name on image tag
* Remove unoconv and call soffice directly
* Allow to include mixin to pool objects
* Improve validation of PYSON domain
* Use JSON canonical form for Dict value
* Remove rules on user
* Add monetary formatting to language
* Add exceptional parent language
* Add get method on ir.lang
* Convert format, currency and strftime of ir.lang into instance methods

Version 4.6.0 - 2017-10-30
* Bug fixes (see mercurial logs for details)
* Add support for Python 3.6
* Remove support for Python 3.3
* Move handling of sequences to the Database object
* Allow to add tests through entry points
* Add translated descriptor for Reference field
* Implement alter_type and alter_size for sqlite backend
* Add a maximum size for request
* Add support for single record report
* Add support for Flat OpenDocument
* Add get_email in trytond.report
* Replace plain extension by txt
* Support test database cache for remote postgresql
* Increase session randomness to 32 bytes
* Allow to specify datetime related values in XML files
* Add environment variables to wsgi script
* Add unique ids check on RPC
* Assert unique records on ModelView.button and Workflow.transition